--- a/index.html
+++ b/index.html
@@ -7,703 +7,7 @@
     <meta name="description" content="" id="meta-description">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <title id="meta-title">Loading...</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            line-height: 1.6;
-            color: #2B2A27;
-            background: #F6F3EF;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-
-        /* Header */
-        header {
-            background: #F9F7F4;
-            border-bottom: 1px solid rgba(62, 61, 58, 0.1);
-            padding: 1rem 0;
-            position: sticky;
-            top: 0;
-            z-index: 100;
-            box-shadow: 0 1px 3px rgba(62, 61, 58, 0.08);
-        }
-
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .logo {
-            display: flex;
-            align-items: center;
-            font-size: 1.5rem;
-            font-weight: 700;
-            color: #3E3D3A;
-        }
-
-        .logo-icon {
-            width: 32px;
-            height: 32px;
-            margin-right: 0.75rem;
-        }
-
-        .logo .orange-text {
-            color: #B47E4E;
-        }
-        .nav-links {
-            display: flex;
-            list-style: none;
-            gap: 2rem;
-        }
-
-        .nav-links a {
-            color: #6A6966;
-            text-decoration: none;
-            font-weight: 500;
-            transition: color 0.3s ease;
-            font-size: 0.95rem;
-        }
-
-        .nav-links a:hover {
-            color: #3E3D3A;
-        }
-
-        .contact-btn {
-            background: #3E3D3A;
-            color: #F9F7F4;
-            padding: 0.75rem 1.5rem;
-            border-radius: 8px;
-            text-decoration: none;
-            font-weight: 600;
-            transition: all 0.3s ease;
-            font-size: 0.9rem;
-        }
-
-        .contact-btn:hover {
-            background: #2B2A27;
-            transform: translateY(-1px);
-        }
-
-        /* Hero Section with Contact Form */
-        .hero {
-            background: linear-gradient(135deg, #F6F3EF 0%, #EDE8E2 100%);
-            padding: 4rem 0 6rem;
-        }
-
-        .hero-content {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 4rem;
-            align-items: center;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .hero-text h1 {
-            font-size: 3rem;
-            font-weight: 800;
-            color: #2B2A27;
-            line-height: 1.2;
-            margin-bottom: 1.5rem;
-        }
-
-        .hero-text p {
-            font-size: 1.1rem;
-            color: #6A6966;
-            margin-bottom: 2rem;
-            line-height: 1.6;
-        }
-
-        .hero-features {
-            display: grid;
-            gap: 1rem;
-            margin-bottom: 2rem;
-        }
-
-        .feature-item {
-            display: flex;
-            align-items: center;
-            gap: 0.75rem;
-            color: #6A6966;
-        }
-
-        .feature-icon {
-            width: 24px;
-            height: 24px;
-            background: #3E3D3A;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #F9F7F4;
-            font-size: 14px;
-            flex-shrink: 0;
-        }
-
-        .hero-contact-form {
-            background: rgba(249, 247, 244, 0.95);
-            padding: 2.5rem;
-            border-radius: 16px;
-            box-shadow: 0 20px 40px rgba(62, 61, 58, 0.12);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(154, 167, 158, 0.2);
-        }
-
-        .form-header {
-            text-align: center;
-            margin-bottom: 2rem;
-        }
-
-        .form-header h3 {
-            font-size: 1.5rem;
-            font-weight: 700;
-            color: #2B2A27;
-            margin-bottom: 0.5rem;
-        }
-
-        .form-header p {
-            color: #6A6966;
-            font-size: 0.95rem;
-        }
-
-        .form-group {
-            margin-bottom: 1.5rem;
-        }
-
-        .form-group label {
-            display: block;
-            margin-bottom: 0.5rem;
-            font-weight: 500;
-            color: #2B2A27;
-        }
-
-        .form-group input,
-        .form-group textarea,
-        .form-group select {
-            width: 100%;
-            padding: 0.875rem;
-            border: 2px solid rgba(62, 61, 58, 0.15);
-            border-radius: 8px;
-            background: #F9F7F4;
-            color: #2B2A27;
-            font-size: 0.95rem;
-            transition: border-color 0.3s ease;
-        }
-
-        .form-group input:focus,
-        .form-group textarea:focus,
-        .form-group select:focus {
-            outline: none;
-            border-color: #3E3D3A;
-        }
-
-        .form-group input::placeholder,
-        .form-group textarea::placeholder {
-            color: #9A9A9A;
-        }
-
-        .form-submit {
-            background: #3E3D3A;
-            color: #F9F7F4;
-            padding: 1rem 2rem;
-            border: none;
-            border-radius: 8px;
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            width: 100%;
-            font-size: 1rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 0.5rem;
-        }
-
-        .form-submit:hover {
-            background: #2B2A27;
-            transform: translateY(-1px);
-        }
-
-        .form-submit:disabled {
-            opacity: 0.6;
-            cursor: not-allowed;
-            transform: none;
-        }
-
-        /* Services Section */
-        .services {
-            padding: 6rem 0;
-            background: #F9F7F4;
-        }
-
-        .section-header {
-            text-align: center;
-            margin-bottom: 4rem;
-        }
-
-        .section-title {
-            font-size: 2.5rem;
-            font-weight: 800;
-            color: #2B2A27;
-            margin-bottom: 1rem;
-        }
-
-        .section-subtitle {
-            font-size: 1.1rem;
-            color: #6A6966;
-            max-width: 600px;
-            margin: 0 auto;
-        }
-
-        .services-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-            gap: 2rem;
-        }
-
-        .service-card {
-            background: #F6F3EF;
-            padding: 2.5rem;
-            border-radius: 12px;
-            border: 1px solid rgba(62, 61, 58, 0.1);
-            transition: all 0.3s ease;
-            position: relative;
-        }
-
-        .service-card:hover {
-            transform: translateY(-4px);
-            box-shadow: 0 20px 40px rgba(62, 61, 58, 0.12);
-            border-color: #9AA79E;
-        }
-
-        .service-icon {
-            width: 64px;
-            height: 64px;
-            background: linear-gradient(135deg, #3E3D3A, #B47E4E);
-            border-radius: 12px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-bottom: 1.5rem;
-            font-size: 1.8rem;
-            color: #F9F7F4;
-        }
-
-        .service-card h3 {
-            font-size: 1.4rem;
-            font-weight: 700;
-            color: #2B2A27;
-            margin-bottom: 1rem;
-        }
-
-        .service-card p {
-            color: #6A6966;
-            line-height: 1.7;
-            margin-bottom: 1.5rem;
-        }
-
-        .service-features {
-            list-style: none;
-            padding: 0;
-        }
-
-        .service-features li {
-            color: #6A6966;
-            font-size: 0.9rem;
-            margin-bottom: 0.5rem;
-            padding-left: 1.5rem;
-            position: relative;
-        }
-
-        .service-features li:before {
-            content: "✓";
-            position: absolute;
-            left: 0;
-            color: #3E3D3A;
-            font-weight: bold;
-        }
-
-        /* Projects Section */
-        .projects {
-            padding: 6rem 0;
-            background: #F6F3EF;
-        }
-
-        .projects-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-            gap: 2rem;
-        }
-
-        .project-card {
-            background: #F9F7F4;
-            border-radius: 12px;
-            overflow: hidden;
-            border: 1px solid rgba(62, 61, 58, 0.1);
-            transition: all 0.3s ease;
-            cursor: pointer;
-            position: relative;
-            display: block;
-            text-decoration: none;
-            color: inherit;
-        }
-
-        .project-card:hover {
-            transform: translateY(-8px);
-            box-shadow: 0 20px 40px rgba(62, 61, 58, 0.15);
-            border-color: #9AA79E;
-        }
-
-        .project-image {
-            width: 100%;
-            height: 220px;
-            object-fit: cover;
-            background: linear-gradient(135deg, #3E3D3A, #B47E4E);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #F9F7F4;
-            font-size: 3rem;
-        }
-
-        .project-image img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .project-content {
-            padding: 2rem;
-        }
-
-        .project-card h3 {
-            font-size: 1.4rem;
-            font-weight: 700;
-            color: #2B2A27;
-            margin-bottom: 1rem;
-        }
-
-        .project-card p {
-            color: #6A6966;
-            line-height: 1.6;
-            margin-bottom: 1.5rem;
-        }
-
-        .project-tags {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 0.5rem;
-            margin-bottom: 1rem;
-        }
-
-        .project-tag {
-            background: rgba(154, 167, 158, 0.15);
-            color: #3E3D3A;
-            padding: 0.4rem 0.8rem;
-            border-radius: 6px;
-            font-size: 0.8rem;
-            font-weight: 600;
-        }
-
-        .project-link {
-            display: inline-flex;
-            align-items: center;
-            gap: 0.5rem;
-            color: #3E3D3A;
-            font-weight: 600;
-            text-decoration: none;
-            transition: all 0.3s ease;
-        }
-
-        .project-link:hover {
-            color: #B47E4E;
-            gap: 0.75rem;
-        }
-
-        .project-link::after {
-            content: "→";
-            font-size: 1.2rem;
-        }
-
-        /* About/Stats Section */
-        .about {
-            padding: 4rem 0;
-            background: #F9F7F4;
-        }
-
-        .about-content {
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .stats {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 3rem;
-        }
-
-        .stat {
-            text-align: center;
-            padding: 2rem 1rem;
-            background: #F6F3EF;
-            border-radius: 12px;
-            transition: all 0.3s ease;
-            border: 1px solid rgba(154, 167, 158, 0.2);
-        }
-
-        .stat:hover {
-            transform: translateY(-4px);
-            box-shadow: 0 10px 25px rgba(62, 61, 58, 0.1);
-            border-color: #9AA79E;
-        }
-
-        .stat-number {
-            font-size: 2.5rem;
-            font-weight: 800;
-            color: #3E3D3A;
-            display: block;
-            margin-bottom: 0.5rem;
-        }
-
-        .stat-label {
-            color: #6A6966;
-            font-size: 0.9rem;
-            font-weight: 500;
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-        }
-
-        /* Team Section */
-        .team {
-            padding: 6rem 0;
-            background: #F6F3EF;
-        }
-
-        .owner-profile {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            max-width: 600px;
-            margin: 3rem auto 0;
-            background: #F9F7F4;
-            padding: 3rem;
-            border-radius: 20px;
-            border: 1px solid rgba(154, 167, 158, 0.2);
-            box-shadow: 0 10px 30px rgba(62, 61, 58, 0.12);
-            transition: all 0.3s ease;
-        }
-
-        .owner-profile:hover {
-            transform: translateY(-8px);
-            box-shadow: 0 20px 40px rgba(62, 61, 58, 0.15);
-        }
-
-        .profile-image {
-            width: 140px;
-            height: 140px;
-            border-radius: 50%;
-            background: linear-gradient(135deg, #3E3D3A, #B47E4E);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 3rem;
-            color: #F9F7F4;
-            margin-bottom: 2rem;
-            border: 4px solid #F9F7F4;
-            box-shadow: 0 10px 25px rgba(62, 61, 58, 0.2);
-            position: relative;
-            overflow: hidden;
-        }
-
-        .profile-image img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            border-radius: 50%;
-        }
-
-        .owner-name {
-            font-size: 2rem;
-            font-weight: 800;
-            color: #2B2A27;
-            margin-bottom: 0.5rem;
-            text-align: center;
-        }
-
-        .owner-title {
-            font-size: 1.2rem;
-            color: #3E3D3A;
-            font-weight: 600;
-            margin-bottom: 1.5rem;
-            text-align: center;
-        }
-
-        .owner-bio {
-            color: #6A6966;
-            font-size: 1.1rem;
-            line-height: 1.7;
-            text-align: center;
-            margin-bottom: 2rem;
-        }
-
-        .credentials {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 1rem;
-            margin-top: 1.5rem;
-        }
-
-        .credential-badge {
-            background: linear-gradient(135deg, #3E3D3A, #B47E4E);
-            color: #F9F7F4;
-            padding: 0.5rem 1rem;
-            border-radius: 20px;
-            font-size: 0.85rem;
-            font-weight: 600;
-            text-align: center;
-        }
-
-        /* Contact Info Section */
-        .contact-info {
-            padding: 6rem 0;
-            background: #2B2A27;
-            color: #F6F3EF;
-        }
-
-        .contact-details {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 1.5rem;
-            margin-top: 3rem;
-        }
-
-        .contact-item {
-            display: flex;
-            align-items: flex-start;
-            gap: 1rem;
-            padding: 2rem;
-            background: rgba(62, 61, 58, 0.3);
-            border-radius: 12px;
-            backdrop-filter: blur(10px);
-            transition: all 0.3s ease;
-            border: 1px solid rgba(154, 167, 158, 0.2);
-        }
-
-        .contact-item:hover {
-            background: rgba(62, 61, 58, 0.4);
-            transform: translateY(-2px);
-            border-color: #9AA79E;
-        }
-
-        .contact-icon {
-            width: 48px;
-            height: 48px;
-            background: #B47E4E;
-            border-radius: 8px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 1.2rem;
-            flex-shrink: 0;
-            margin-top: 0.25rem;
-        }
-
-        .contact-text {
-            flex: 1;
-        }
-
-        .contact-item h4 {
-            font-size: 1.1rem;
-            font-weight: 600;
-            margin-bottom: 0.5rem;
-            color: #F6F3EF;
-        }
-
-        .contact-item p {
-            opacity: 0.9;
-            font-size: 0.95rem;
-            line-height: 1.5;
-            color: rgba(246, 243, 239, 0.9);
-        }
-
-        /* Footer */
-        footer {
-            background: #1A1918;
-            color: #F6F3EF;
-            text-align: center;
-            padding: 2rem 0;
-        }
-
-        footer p {
-            opacity: 0.8;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            .nav-links {
-                display: none;
-            }
-
-            .hero-content {
-                grid-template-columns: 1fr;
-                gap: 2rem;
-            }
-
-            .hero-text h1 {
-                font-size: 2.25rem;
-            }
-
-            .hero-contact-form {
-                padding: 2rem;
-            }
-
-            .services-grid {
-                grid-template-columns: 1fr;
-            }
-
-            .stats {
-                grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-                gap: 2rem;
-            }
-
-            .owner-profile {
-                padding: 2rem;
-                margin: 2rem auto 0;
-            }
-
-            .profile-image {
-                width: 120px;
-                height: 120px;
-                font-size: 2.5rem;
-            }
-
-            .owner-name {
-                font-size: 1.75rem;
-            }
-
-            .credentials {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .contact-details {
-                grid-template-columns: 1fr;
-            }
-        }
-    </style>
-
+    <link rel="stylesheet" href="style.css">
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
 </head>
 <body>
@@ -758,7 +62,6 @@
                         <div class="form-group">
                             <label for="service">Service Needed</label>
                             <select id="service" name="service" required>
-                                <!-- Options will be populated dynamically -->
                             </select>
                         </div>
                         <div class="form-group">
@@ -829,7 +132,7 @@
     <section class="contact-info" id="contact">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title" style="color: #F6F3EF;" id="contact-title">Loading...</h2>
+                <h2 class="section-title" style="color: #f8fafc;" id="contact-title">Loading...</h2>
                 <p class="section-subtitle" style="color: rgba(246,243,239,0.9);" id="contact-subtitle">Loading...</p>
             </div>
             <div class="contact-details" id="contact-details">
@@ -843,7 +146,7 @@
         <div class="container">
             <p id="footer-copyright">Loading...</p>
             <p style="margin-top: 10px; opacity: 0.8;">
-                <a href="" id="privacy-link" style="color: #F6F3EF; text-decoration: underline; opacity: 0.8; transition: opacity 0.3s;">Privacy Policy</a>
+                <a href="" id="privacy-link" style="color: #f8fafc; text-decoration: underline; opacity: 0.8; transition: opacity 0.3s;">Privacy Policy</a>
             </p>
         </div>
     </footer>
